--- a/overview/index.html
+++ b/overview/index.html
@@ -325,17 +325,71 @@ namespace di = boost::di;
 <ul>
 <li>In a nutshell</li>
 </ul>
-<pre><code class="cpp">template&lt;class TConfig, class... TBindings&gt;
+<pre><code class="cpp">struct direct; // T(...)
+struct uniform; // T{...}
+
+template&lt;class T, class... TArgs&gt; is_braces_constructible; // type T is constructible using T{...}
+template&lt;class T, class... TArgs&gt; is_constructible; // Type T is constructible using T(...)
+
+template&lt;class T&gt; is_injectable; // Type T uses BOOST_DI_INJECT or BOOST_DI_INJECT_TRAITS
+
+template&lt;class TConfig, class... TBindings&gt; // For Example, TBindings = { di::bind&lt;Interface&gt;.to&lt;Implementation&gt; }
 struct core::injector : TBindings... {
-  template&lt;class T&gt;
+  using config = TConfig;
+  using deps = TBindings...;
+
+  template&lt;class T&gt; // For example, T = Interface
   auto create() const noexcept {
-    TConfig::policies&lt;T&gt;()...;
-    auto dependency = core::binder&lt;TBindings...&gt;().resolve&lt;T&gt;(this);
-    return core::wrapper&lt;T&gt;{dependency.create(TConfig::provider().get&lt;T&gt;())}; // get&lt;T&gt; -&gt; create&lt;ctor_traits&lt;T&gt;...&gt;()
+    TConfig::policies&lt;T&gt;()...; // verify policies
+    using Type = core::binder&lt;TBindings...&gt;().resolve&lt;T&gt;(*this); // Type = Implementation
+    return core::wrapper&lt;T&gt;{dependency.create(provider&lt;TInjector&gt;{*this}.get&lt;Type&gt;())};
   }
+};
+
+template&lt;class TInjector, class TConfig&gt;
+sturct provider {
+  template&lt;class T&gt; auto get() const noexcept {
+    using pair&lt;TInitialization, TCtor...&gt; = decltype(ctor_traits&lt;TInjector, T&gt;());
+    return TConfig::provider().get(TInitialization{}, TCtor...);
+  }
+  const TInjector&amp; injector;
+};
+
+template&lt;class TInjector&gt;
+struct any_type {
+  template&lt;class T&gt;
+  operator T() const {
+    return injector.templte create&lt;T&gt;();
+  }
+  const TInjector&amp; injector;
+};
+
+template&lt;class TInjector, class T&gt;
+auto ctor_traits() {
+  if (is_injectable&lt;T&gt;() {
+    return pair&lt;direct, typename T::boost_di_inject__&gt;{}; // BOOST_DI_INJECT(T, args...) -&gt; T(args...)
+  }
+
+  for (auto i = BOOST_DI_CFG_CTOR_LIMIT_SIZE; i &gt;= 0; --i) {
+    if (is_constructible&lt;T, any_type&lt;TInjector&gt;()...&gt;()) {
+      return pair&lt;direct, any_type&lt;TInjector&gt;...&gt;{}; // T(any_type...)
+    }
+  }
+
+  for (auto i = BOOST_DI_CFG_CTOR_LIMIT_SIZE; i &gt;= 0; --i) {
+    if (is_braces_constructible&lt;T, any_type&lt;TInjector&gt;()...&gt;()) {
+      return pair&lt;uniform, any_type&lt;TInjector&gt;...&gt;{}; // T{any_type...}
+    }
+  }
+
+  return error(...);
 };
 </code></pre>
 
+<p><span class="fa fa-eye wy-text-neutral warning"> <strong>Note</strong><br/><br/>
+<a href="../user_guide/index.html#di_automatic">Automatic injection</a> depends on template implicit conversion operator and therefore
+conversion constructors <code>template&lt;class I&gt; T(I)</code> are not supported and have to be injected using <a href="#BOOST_DI_INJECT">BOOST_DI_INJECT</a>, <a href="#BOOST_DI_INJECT_TRAITS">BOOST_DI_INJECT_TRAITS</a>, <a href="#di_inject">di::inject</a> or <a href="#di_ctor_traits">di::ctor_traits</a>.
+</span></p>
 <h3 id="performance">Performance</h3>
 <ul>
 <li><strong>Run-time performance</strong><ul>
