--- a/boost/index.html
+++ b/boost/index.html
@@ -119,7 +119,7 @@ Krzysztof Jusiak
 It is like the Strategy Pattern, except the strategy is set once, at construction. DI enables loosely coupled designs, which are easier to maintain and test.</p>
 <blockquote>
 <p><strong>"Let's make some coffee!"</strong>
-<p align="center"><img src="../images/coffee_maker.png" alt="coffee maker"/></p></p>
+<p align="center"><img src="images/coffee_maker.png" alt="coffee maker"/></p></p>
 </blockquote>
 <pre><code class="cpp">                      No Dependency injection                 | Dependency Injection
                       ----------------------------------------|-------------------------------------------
