--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 It is like the Strategy Pattern, except the strategy is set once, at construction. DI enables loosely coupled designs, which are easier to maintain and test.</p>
 <blockquote>
 <p><strong>"Let's make some coffee!"</strong>
-<p align="center"><img src="../images/coffee_maker.png" alt="coffee maker"/></p></p>
+<p align="center"><img src="images/coffee_maker.png" alt="coffee maker"/></p></p>
 </blockquote>
 <pre><code class="cpp">                      No Dependency injection                 | Dependency Injection
                       ----------------------------------------|-------------------------------------------
@@ -403,5 +403,5 @@ but also can help you with...</p>
 
 <!--
 MkDocs version : 0.15.3
-Build Date UTC : 2016-02-25 11:48:28.925452
+Build Date UTC : 2016-02-25 12:18:23.760362
 -->
