--- a/boost-modern/extensions/index.html
+++ b/boost-modern/extensions/index.html
@@ -153,9 +153,9 @@ hljs.initHighlightingOnLoad();
 </div>
 <script async defer id="github-bjs" src="https://buttons.github.io/buttons.js"></script>
 <select onChange="window.location.href=this.value" style="position: absolute; top: 20px; right: 30px; z-index: 10;">
-  <option value="https://boost-experimental.github.io/di/boost-modern">Theme: Boost-Modern</option>
-  <option value="https://boost-experimental.github.io/di/boost">Theme: Boost</option>
-  <option value="https://boost-experimental.github.io/di">Theme: Boost-Experimental</option>
+    <option value="https://boost-experimental.github.io/di">Theme: Boost-Experimental</option>
+    <option value="https://boost-experimental.github.io/di/boost-modern" selected>Theme: Boost-Modern</option>
+    <option value="https://boost-experimental.github.io/di/boost">Theme: Boost</option>
 </select>
 </body>
 </html>
