--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@ but also can help you with...</p>
           <footer>
 
   <select onChange="window.location.href=this.value" style="position: absolute; top: 20px; right: 30px; z-index: 10;">
-    <option value="https://boost-experimental.github.io/di">Theme: Boost-Experimental</option>
+    <option value="https://boost-experimental.github.io/di" selected>Theme: Boost-Experimental</option>
     <option value="https://boost-experimental.github.io/di/boost-modern">Theme: Boost-Modern</option>
     <option value="https://boost-experimental.github.io/di/boost">Theme: Boost</option>
   </select>
@@ -404,5 +404,5 @@ but also can help you with...</p>
 
 <!--
 MkDocs version : 0.15.3
-Build Date UTC : 2016-02-25 14:54:39.252830
+Build Date UTC : 2016-02-25 16:02:02.062845
 -->
