--- a/boost/TODO/index.html
+++ b/boost/TODO/index.html
@@ -35,7 +35,7 @@
 
 
 <div class="section">
-<p><img alt="IFRAME" src="https://waffle.io/boost-experimental/di" /></p>
+<p><a href="https://waffle.io/boost-experimental/di">https://waffle.io/boost-experimental/di</a></p>
 </div>
 
 <script src="../js/highlight.pack.js"></script>
@@ -58,9 +58,9 @@ hljs.initHighlightingOnLoad();
 </div>
 <script async defer id="github-bjs" src="https://buttons.github.io/buttons.js"></script>
 <select onChange="window.location.href=this.value" style="position: absolute; top: 20px; right: 30px; z-index: 10;">
-  <option value="https://boost-experimental.github.io/di/boost">Theme: Boost</option>
-  <option value="https://boost-experimental.github.io/di/boost-modern">Theme: Boost-Modern</option>
-  <option value="https://boost-experimental.github.io/di">Theme: Boost-Experimental</option>
+    <option value="https://boost-experimental.github.io/di">Theme: Boost-Experimental</option>
+    <option value="https://boost-experimental.github.io/di/boost-modern">Theme: Boost-Modern</option>
+    <option value="https://boost-experimental.github.io/di/boost" selected>Theme: Boost</option>
 </select>
 </body>
 </html>
