--- a/overview/index.html
+++ b/overview/index.html
@@ -1078,7 +1078,7 @@ conversion constructors <code>template&lt;class I&gt; T(I)</code> are not suppor
           <footer>
 
   <select onChange="window.location.href=this.value" style="position: absolute; top: 20px; right: 30px; z-index: 10;">
-    <option value="https://boost-experimental.github.io/di">Theme: Boost-Experimental</option>
+    <option value="https://boost-experimental.github.io/di" selected>Theme: Boost-Experimental</option>
     <option value="https://boost-experimental.github.io/di/boost-modern">Theme: Boost-Modern</option>
     <option value="https://boost-experimental.github.io/di/boost">Theme: Boost</option>
   </select>
