--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -901,7 +901,7 @@ Please check them out and write your own!</p>
           <footer>
 
   <select onChange="window.location.href=this.value" style="position: absolute; top: 20px; right: 30px; z-index: 10;">
-    <option value="https://boost-experimental.github.io/di">Theme: Boost-Experimental</option>
+    <option value="https://boost-experimental.github.io/di" selected>Theme: Boost-Experimental</option>
     <option value="https://boost-experimental.github.io/di/boost-modern">Theme: Boost-Modern</option>
     <option value="https://boost-experimental.github.io/di/boost">Theme: Boost</option>
   </select>
