--- a/boost/tutorial/index.html
+++ b/boost/tutorial/index.html
@@ -12,9 +12,9 @@
 </head>
 <body bgcolor="white" text="black" link="#0000FF" vlink="#840084" alink="#0000FF">
 
-<table cellpadding="2" width="100%"><tr>
-<td valign="top"><img alt="Boost C++ Libraries" width="277" height="86" src="../images/boost.png"></td>
-</tr></table>
+<div width="100%">
+<img alt="Boost C++ Libraries" width="277" height="86" src="../images/boost.png">
+</div>
 
 <hr>
 <div class="spirit-nav">
@@ -1149,15 +1149,12 @@ hljs.configure({languages:['cpp']});
 hljs.initHighlightingOnLoad();
 </script>
 
-<table xmlns:rev="http://www.cs.rpi.edu/~gregod/boost/tools/doc/revision" width="100%"><tr>
-<td align="left"></td>
-<td align="right"><div class="copyright-footer">Copyright &copy; 2016
+<div class="copyright-footer">Copyright &copy; 2016
       <p>Distributed under the Boost Software License, Version 1.0.
       (See accompanying file <code class="filename">LICENSE_1_0.txt</code> or copy at
       <a href="http://www.boost.org/LICENSE_1_0.txt" target="_top">http://www.boost.org/LICENSE_1_0.txt</a>)
       </p>
-</div></td>
-</tr></table>
+</div>
 
 </div>
 
