--- a/boost/examples/index.html
+++ b/boost/examples/index.html
@@ -208,6 +208,9 @@
                                                               +----------------------------------------+
 </code></pre>
 
+<ul>
+<li><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/hello_world.cpp">https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/hello_world.cpp</a></li>
+</ul>
 <h3 id="bindings">Bindings</h3>
 <pre><code class="cpp">#include &lt;boost/di.hpp&gt;
 
@@ -280,6 +283,9 @@ int main() {
 }
 </code></pre>
 
+<ul>
+<li><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/bindings.cpp">https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/bindings.cpp</a></li>
+</ul>
 <h3 id="dynamic-bindings">Dynamic Bindings</h3>
 <pre><code class="cpp">#include &lt;boost/di.hpp&gt;
 
@@ -318,6 +324,9 @@ int main() {
 }
 </code></pre>
 
+<ul>
+<li><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/dynamic_bindings.cpp">https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/dynamic_bindings.cpp</a></li>
+</ul>
 <h3 id="forward-bindings">Forward Bindings</h3>
 <pre><code class="cpp">#include &lt;boost/di.hpp&gt;
 
@@ -351,6 +360,9 @@ int main() {
 }
 </code></pre>
 
+<ul>
+<li><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/fwd_bindings.cpp">https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/fwd_bindings.cpp</a></li>
+</ul>
 <h3 id="multiple-bindings">Multiple Bindings</h3>
 <pre><code class="cpp">#include &lt;boost/di.hpp&gt;
 
@@ -394,6 +406,9 @@ int main() {
 }
 </code></pre>
 
+<ul>
+<li><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/multiple_bindings.cpp">https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/multiple_bindings.cpp</a></li>
+</ul>
 <h3 id="binding-non-owning-pointer">Binding Non-owning Pointer</h3>
 <pre><code class="cpp">#include &lt;boost/di.hpp&gt;
 
@@ -417,6 +432,9 @@ int main() {
 }
 </code></pre>
 
+<ul>
+<li><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/bind_non_owning_ptr.cpp">https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/bind_non_owning_ptr.cpp</a></li>
+</ul>
 <h3 id="automatic-injection">Automatic Injection</h3>
 <pre><code class="cpp">#include &lt;boost/di.hpp&gt;
 
@@ -457,6 +475,9 @@ int main() {
 }
 </code></pre>
 
+<ul>
+<li><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/automatic_injection.cpp">https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/automatic_injection.cpp</a></li>
+</ul>
 <h3 id="constructor-signature">Constructor Signature</h3>
 <pre><code class="cpp">#include &lt;boost/di.hpp&gt;
 
@@ -512,6 +533,9 @@ int main() {
 }
 </code></pre>
 
+<ul>
+<li><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/constructor_signature.cpp">https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/constructor_signature.cpp</a></li>
+</ul>
 <h3 id="constructor-injection">Constructor Injection</h3>
 <pre><code class="cpp">#include &lt;boost/di.hpp&gt;
 
@@ -580,6 +604,9 @@ int main() {
 }
 </code></pre>
 
+<ul>
+<li><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/constructor_injection.cpp">https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/constructor_injection.cpp</a></li>
+</ul>
 <h3 id="multiple-interface">Multiple Interface</h3>
 <pre><code class="cpp">#include &lt;boost/di.hpp&gt;
 
@@ -605,6 +632,9 @@ int main() {
 }
 </code></pre>
 
+<ul>
+<li><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/multiple_interfaces.cpp">https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/multiple_interfaces.cpp</a></li>
+</ul>
 <h3 id="annotations">Annotations</h3>
 <pre><code class="cpp">#include &lt;boost/di.hpp&gt;
 
@@ -678,6 +708,9 @@ int main() {
 
 </code></pre>
 
+<ul>
+<li><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/annotations.cpp">https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/annotations.cpp</a></li>
+</ul>
 <h3 id="deduce-scope">Deduce Scope</h3>
 <pre><code class="cpp">#include &lt;boost/di.hpp&gt;
 
@@ -722,6 +755,9 @@ int main() {
 }
 </code></pre>
 
+<ul>
+<li><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/deduce_scope.cpp">https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/deduce_scope.cpp</a></li>
+</ul>
 <h3 id="custom-scope">Custom Scope</h3>
 <pre><code class="cpp">#include &lt;boost/di.hpp&gt;
 
@@ -778,6 +814,9 @@ int main() {
 }
 </code></pre>
 
+<ul>
+<li><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/custom_scope.cpp">https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/custom_scope.cpp</a></li>
+</ul>
 <h3 id="eager-singletons">Eager Singletons</h3>
 <pre><code class="cpp">#include &lt;boost/di.hpp&gt;
 
@@ -813,6 +852,9 @@ int main() {
 }
 </code></pre>
 
+<ul>
+<li><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/eager_singletons.cpp">https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/eager_singletons.cpp</a></li>
+</ul>
 <h3 id="modules">Modules</h3>
 <pre><code class="cpp">
 #include &lt;boost/di.hpp&gt;
@@ -876,6 +918,9 @@ int main() {
 }
 </code></pre>
 
+<ul>
+<li><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/modules.cpp">https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/modules.cpp</a></li>
+</ul>
 <h3 id="modules-hppcpp">Modules (hpp/cpp)</h3>
 <ul>
 <li>See <a href="https://github.com/boost-experimental/di/tree/cpp14/example/modules">https://github.com/boost-experimental/di/tree/cpp14/example/modules</a></li>
@@ -923,6 +968,9 @@ int main() {
 }
 </code></pre>
 
+<ul>
+<li><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/custom_policy.cpp">https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/custom_policy.cpp</a></li>
+</ul>
 <h3 id="custom-provider">Custom Provider</h3>
 <pre><code class="cpp">#include &lt;boost/di.hpp&gt;
 
@@ -977,6 +1025,9 @@ int main() {
 }
 </code></pre>
 
+<ul>
+<li><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/custom_provider.cpp">https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/custom_provider.cpp</a></li>
+</ul>
 <h3 id="pool-provider">Pool Provider</h3>
 <pre><code class="cpp">
 #include &lt;boost/di.hpp&gt;
@@ -1029,6 +1080,9 @@ int main() {
 }
 </code></pre>
 
+<ul>
+<li><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/pool_provider.cpp">https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/pool_provider.cpp</a></li>
+</ul>
 <h3 id="configuration">Configuration</h3>
 <pre><code class="cpp">#include &lt;boost/di.hpp&gt;
 
@@ -1043,6 +1097,10 @@ int main() {
   std::cout &lt;&lt; &quot; version of boost.di [&quot; &lt;&lt; BOOST_DI_VERSION &lt;&lt; &quot;]&quot; &lt;&lt; std::endl;
 }
 </code></pre>
+
+<ul>
+<li><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/configuration.cpp">https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/configuration.cpp</a></li>
+</ul>
 </div>
 
 <script src="../js/highlight.pack.js"></script>
