--- a/boost/extensions/index.html
+++ b/boost/extensions/index.html
@@ -155,6 +155,9 @@ int main() {
 }
 </code></pre>
 
+<ul>
+<li><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/extension/bindings/constructor_bindings.cpp">https://raw.githubusercontent.com/boost-experimental/di/cpp14/extension/bindings/constructor_bindings.cpp</a></li>
+</ul>
 <h3 id="assisted-injection">Assisted Injection</h3>
 <pre><code class="cpp">#include &lt;boost/di.hpp&gt;
 
@@ -193,6 +196,9 @@ int main() {
 }
 </code></pre>
 
+<ul>
+<li><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/extension/injections/assisted_injection.cpp">https://raw.githubusercontent.com/boost-experimental/di/cpp14/extension/injections/assisted_injection.cpp</a></li>
+</ul>
 <h3 id="concepts">Concepts</h3>
 <pre><code class="cpp">#include &lt;boost/di.hpp&gt;
 
@@ -235,6 +241,9 @@ int main() {
 #endif
 </code></pre>
 
+<ul>
+<li><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/extension/injections/concepts.cpp">https://raw.githubusercontent.com/boost-experimental/di/cpp14/extension/injections/concepts.cpp</a></li>
+</ul>
 <h3 id="lazy">Lazy</h3>
 <pre><code class="cpp">#include &lt;boost/di.hpp&gt;
 
@@ -267,6 +276,9 @@ int main() {
 }
 </code></pre>
 
+<ul>
+<li><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/extension/injections/lazy.cpp">https://raw.githubusercontent.com/boost-experimental/di/cpp14/extension/injections/lazy.cpp</a></li>
+</ul>
 <h3 id="named-parameters">Named Parameters</h3>
 <pre><code class="cpp">#include &lt;boost/di.hpp&gt;
 
@@ -295,6 +307,9 @@ int main() {
 
 </code></pre>
 
+<ul>
+<li><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/extension/injections/named_parameters.cpp">https://raw.githubusercontent.com/boost-experimental/di/cpp14/extension/injections/named_parameters.cpp</a></li>
+</ul>
 <h3 id="xml-injection">XML Injection</h3>
 <pre><code class="cpp">#include &lt;boost/di.hpp&gt;
 
@@ -339,6 +354,9 @@ int main() {
 }
 </code></pre>
 
+<ul>
+<li><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/extension/injections/xml_injection.cpp">https://raw.githubusercontent.com/boost-experimental/di/cpp14/extension/injections/xml_injection.cpp</a></li>
+</ul>
 <h3 id="types-dumper">Types Dumper</h3>
 <pre><code class="cpp">#include &lt;boost/di.hpp&gt;
 
@@ -396,6 +414,9 @@ int main() {
 }
 </code></pre>
 
+<ul>
+<li><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/extension/policies/types_dumper.cpp">https://raw.githubusercontent.com/boost-experimental/di/cpp14/extension/policies/types_dumper.cpp</a></li>
+</ul>
 <h3 id="uml-dumper">UML Dumper</h3>
 <pre><code class="cpp">#include &lt;boost/di.hpp&gt;
 
@@ -448,6 +469,9 @@ int main() {
 }
 </code></pre>
 
+<ul>
+<li><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/extension/policies/uml_dumper.cpp">https://raw.githubusercontent.com/boost-experimental/di/cpp14/extension/policies/uml_dumper.cpp</a></li>
+</ul>
 <p><a href="../images/uml_dumper.png"><img alt="UML Dumper" src="../images/uml_dumper.png" /></a></p>
 <h3 id="mocks-provider">Mocks Provider</h3>
 <pre><code class="cpp">#include &lt;boost/di.hpp&gt;
@@ -499,6 +523,9 @@ test integration_test = [] {
 int main() {}
 </code></pre>
 
+<ul>
+<li><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/extension/providers/mocks_provider.cpp">https://raw.githubusercontent.com/boost-experimental/di/cpp14/extension/providers/mocks_provider.cpp</a></li>
+</ul>
 <h3 id="scoped-scope">Scoped Scope</h3>
 <pre><code class="cpp">#include &lt;boost/di.hpp&gt;
 
@@ -578,6 +605,9 @@ int main() {
 }
 </code></pre>
 
+<ul>
+<li><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/extension/scopes/scoped_scope.cpp">https://raw.githubusercontent.com/boost-experimental/di/cpp14/extension/scopes/scoped_scope.cpp</a></li>
+</ul>
 <h3 id="session-scope">Session Scope</h3>
 <pre><code class="cpp">#include &lt;boost/di.hpp&gt;
 
@@ -665,6 +695,9 @@ int main() {
 }
 </code></pre>
 
+<ul>
+<li><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/extension/scopes/session_scope.cpp">https://raw.githubusercontent.com/boost-experimental/di/cpp14/extension/scopes/session_scope.cpp</a></li>
+</ul>
 <h3 id="shared-scope">Shared Scope</h3>
 <pre><code class="cpp">#include &lt;boost/di.hpp&gt;
 
@@ -742,6 +775,10 @@ int main() {
   }
 }
 </code></pre>
+
+<ul>
+<li><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/extension/scopes/shared_scope.cpp">https://raw.githubusercontent.com/boost-experimental/di/cpp14/extension/scopes/shared_scope.cpp</a></li>
+</ul>
 </div>
 
 <script src="../js/highlight.pack.js"></script>
