--- a/boost/overview/index.html
+++ b/boost/overview/index.html
@@ -536,6 +536,9 @@ int main() {
 }
 </code></pre>
 
+<ul>
+<li><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/errors/boundable_type_is_abstract.cpp">https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/errors/boundable_type_is_abstract.cpp</a></li>
+</ul>
 <table>
 <thead>
 <tr>
@@ -562,6 +565,9 @@ int main() {
 }
 </code></pre>
 
+<ul>
+<li><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/errors/boundable_type_is_bound_more_than_once.cpp">https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/errors/boundable_type_is_bound_more_than_once.cpp</a></li>
+</ul>
 <table>
 <thead>
 <tr>
@@ -607,6 +613,9 @@ int main() {
 }
 </code></pre>
 
+<ul>
+<li><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/errors/creatable_abstract_type_is_not_bound.cpp">https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/errors/creatable_abstract_type_is_not_bound.cpp</a></li>
+</ul>
 <pre><code class="cpp">#define BOOST_DI_CFG_DIAGNOSTICS_LEVEL 1
 #include &lt;boost/di.hpp&gt;
 
@@ -630,6 +639,9 @@ int main() {
 }
 </code></pre>
 
+<ul>
+<li><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/errors/creatable_expose_abstract_type_is_not_bound.cpp">https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/errors/creatable_expose_abstract_type_is_not_bound.cpp</a></li>
+</ul>
 <h3 id="benchmarks">Benchmarks</h3>
 <ul>
 <li><strong>C++ Dependency Injection Libraries</strong></li>
