--- a/boost/index.html
+++ b/boost/index.html
@@ -277,9 +277,16 @@ but also can help you with...</p>
                                                               +----------------------------------------+
 </code></pre>
 
-<p>[<a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/extension/policies/uml_dumper.cpp">Get UML Dumper Extension</a>]
-[<a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/extension/injections/xml_injection.cpp">Get XML Injection Extension</a>]
-[<a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/user_guide/policies_constructible_local.cpp">Get Constructible Example</a>]</p>
+<ul>
+<li>
+<p><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/hello_world.cpp">https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/hello_world.cpp</a></p>
+</li>
+<li>
+<p><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/extension/policies/uml_dumper.cpp"> UML Dumper Extension</a></p>
+</li>
+<li><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/extension/injections/xml_injection.cpp"> XML Injection Extension</a></li>
+<li><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/user_guide/policies_constructible_local.cpp"> Constructible Example</a></li>
+</ul>
 <p><br /><br /></p>
 <h3 id="boostdi-design-goals">Boost.DI design goals</h3>
 <ul>
