--- a/index.html
+++ b/index.html
@@ -224,9 +224,9 @@
 <p><strong><a href="http://www.youtube.com/watch?v=IKD2-MAkXyQ">Dependency Injection</a> (DI)</strong> involves passing (injecting) one or more dependencies (or services) to a dependent object (or client) which become part of the client’s state.
 It is like the Strategy Pattern, except the strategy is set once, at construction. DI enables loosely coupled designs, which are easier to maintain and test.</p>
 <blockquote>
-<p><strong>"Let's make some coffee!"</strong>
-<p align="center"><img src="images/coffee_maker.png" alt="coffee maker"/></p></p>
+<p><strong>"Let's make some coffee!"</strong></p>
 </blockquote>
+<p><center><a href="./images/coffee_maker.png"><img alt="Coffee Maker" src="./images/coffee_maker.png" /></a></center></p>
 <pre><code class="cpp">                      No Dependency injection                 | Dependency Injection
                       ----------------------------------------|-------------------------------------------
                       class coffee_maker {                    | class coffee_maker {
@@ -404,5 +404,5 @@ but also can help you with...</p>
 
 <!--
 MkDocs version : 0.15.3
-Build Date UTC : 2016-02-25 18:23:39.608350
+Build Date UTC : 2016-02-25 20:18:04.367540
 -->
