--- a/boost/extensions/index.html
+++ b/boost/extensions/index.html
@@ -13,7 +13,7 @@
 <body bgcolor="white" text="black" link="#0000FF" vlink="#840084" alink="#0000FF">
 
 <div width="100%">
-<img alt="Boost C++ Libraries" width="277" height="86" src="../images/boost.png">
+<a href="http://www.boost.org/"><img alt="Boost C++ Libraries" width="277" height="86" src="../images/boost.png"></a>
 </div>
 
 <hr>
