--- a/boost/TODO/index.html
+++ b/boost/TODO/index.html
@@ -33,7 +33,7 @@
 
 
 <div class="section">
-<p><img alt="IFRAME" src="https://waffle.io/boost-experimental/di" /></p>
+<p><a href="https://waffle.io/boost-experimental/di">https://waffle.io/boost-experimental/di</a></p>
 </div>
 
 <script src="../js/highlight.pack.js"></script>
