--- a/boost/index.html
+++ b/boost/index.html
@@ -204,12 +204,89 @@ but also can help you with...</p>
 <li>Boost.DI reduces boilerplate code (See <a href="tutorial/index.html#1-basic-create-objects-tree">Create Objects Tree</a>)</li>
 <li>Boost.DI reduces testing effort (See <a href="extensions/index.html#mocks-provider">Mocks Provider</a>)</li>
 <li>Boost.DI gives better control of what and how is created (See <a href="user_guide/index.html#di_constructible">Constructible Policy</a>)</li>
-<li>Boost.DI gives better understanding about objects hierarchy (See <a href="extensions/index.html#uml-dumper">UML Dumper</a>)
-<img alt="CPP" src="https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/hello_world.cpp" /></li>
+<li>Boost.DI gives better understanding about objects hierarchy (See <a href="extensions/index.html#uml-dumper">UML Dumper</a>)</li>
 </ul>
-<p><img alt="CPP(BTN)" src="./Run_UML_Dumper_Extension|https://raw.githubusercontent.com/boost-experimental/di/cpp14/extension/policies/uml_dumper.cpp" />
-<img alt="CPP(BTN)" src="./Run_XML_Injection_Extension|https://raw.githubusercontent.com/boost-experimental/di/cpp14/extension/injections/xml_injection.cpp" />
-<img alt="CPP(BTN)" src="./Run_Constructible_Example|https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/user_guide/policies_constructible_local.cpp" /></p>
+<pre><code class="cpp">+---------------------------------------------------+
+|$CXX -std=c++14 -fno-exceptions -O2 hello_world.cpp|
+|#Compiles in 0.4s!                                 |
++-----------------------------+---------------------+
+                              |
+                              \
+                                  #include &lt;boost/di.hpp&gt; +-----------+
+ +-----------------------------+                                      |
+ |                             |  namespace di = boost::di;     +-----+--------------------------------+
+ |                             +-+                              |One header (3k lines, no dependencies)|
+ |  +-----------------------+    +struct uniform {              +--------------------------------------+
+ |  |Automatic conversion   |       bool &amp;b;
+ |  |between std::shared_ptr+------+boost::shared_ptr&lt;interface&gt; sp;
+ |  |and boost::shared_ptr  |     };
+ |  +-----------------------+
+ |                             +-+class direct {
+ |                          +--+   public:                                 +---------------------------+
+ |                          |       direct(const uniform &amp;uniform          |ASM x86-64 == `make_unique`|
+ |               +----------+            , std::shared_ptr&lt;interface&gt; sp)  +---------------------------+
+ |               |                    : uniform_(uniform)                  |push   %rax                |
+ |               |                  , sp_(sp)                              |mov    $0x8,%edi           |
+ |               |                  {}                                     |callq  0x4007b0 &lt;_Znwm@plt&gt;|
+ |               |                                                         |movq   $0x400a10,(%rax)    |
+ | +-------------+----------+       const uniform &amp;uniform_;               |mov    $0x8,%esi           |
+ | |Inject  dependencies    |       std::shared_ptr&lt;interface&gt; sp_;        |mov    %rax,%rdi           |
+ | |using T{...} or T(...)  |     };                                       |callq  0x400960 &lt;_ZdlPvm&gt;  |
+ +-+without REFLECTION or   |                                +-------------+mov    $0x1,%eax           |
+   |any changes/registration+-----+class hello_world {       |             |pop    %rdx                |
+   |in the code!            |      public:                   +             |retq                       |
+   +------------------------+       hello_world(std::unique_ptr&lt;direct&gt; d  +-------------------------+-+
+                                   +--------+ , interface &amp;ref                                       |
+                                   |          , int i)+-------------------------------------------+  +-+
+                                   |  : i_(i) {                                                   |    |
+                                   |  assert(false == d-&gt;uniform_.b);                             |    |
+                     +-------------+  assert(d-&gt;sp_.get() == d-&gt;uniform_.sp.get());               |    |
+                     |                assert(&amp;ref == d-&gt;sp_.get());     +                         |    |
+    +----------------+---------+    }                         +         |                         |    |
+    |Deduce scope based on     |                              |         |                         |    |
+    |constructor parameter type|    auto run() const {        +---------+ +--------------------+  |    |
+    |T -&gt; unique               |      return i_ == 42;                  +-+The same shared_ptr,|  |    |
+    |T&amp; -&gt; singleton           |    }                                     |reference provided  |  |    |
+    |shared_ptr -&gt; singleton   |                                          +--------------------+  |    |
+    |unique_ptr |&gt; unique      |   private:                                                       |    |
+    +--------------------------+    int i_ = 0;                                                +--+    |
+                                  };                                                           |       |
+                                                                                               |       |
+                                  int main() {                          +----------------------+--+    |
+                                    auto runtime_value = false;         |ASM x86-64 == 'return 42'|    |
+                                                                        +-------------------------+    |
+                    +-------------+ auto module = [&amp;] {                 |mov $0x2a,%eax           |    |
+            +-------+-----------+     return di::make_injector(         |retq                     |    |
+            |Split configuration|       di::bind&lt;&gt;().to(runtime_value)  +----+--------------------+    |
+            |into modules       |     );                                     |                         |
+            +-------+-----------+   };                                       |                         |
+                    |         +----------------------------------------------+                         |
+                    |         |     auto injector = di::make_injector(                                 |
+                    |         |       di::bind&lt;interface&gt;().to&lt;implementation&gt;()+----------------------+
+                    |         +---+ , di::bind&lt;&gt;().to(42)
+                    +--------------+, module()                                     +---------------------+
+                                    );                                  +----------+Compile time creation|
+                                                                        +          |guarantee!           |
+                                    auto object = injector.create&lt;hello_world&gt;();  +---------------------+
+                                    assert(object.run());  +
+                                  }                        |
+                                                           |  +----------------------------------------+
+                                                           +--+Short compile time error messages!      |
+                                                              |For example:                            |
+                                                              |`abstract_type&lt;interface&gt;::is_not_bound`|
+                                                              +----------------------------------------+
+</code></pre>
+
+<ul>
+<li>
+<p><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/hello_world.cpp">https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/hello_world.cpp</a></p>
+</li>
+<li>
+<p><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/extension/policies/uml_dumper.cpp"> UML Dumper Extension</a></p>
+</li>
+<li><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/extension/injections/xml_injection.cpp"> XML Injection Extension</a></li>
+<li><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/user_guide/policies_constructible_local.cpp"> Constructible Example</a></li>
+</ul>
 <p><br /><br /></p>
 <h3 id="boostdi-design-goals">Boost.DI design goals</h3>
 <ul>
