--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 </thead>
 <tbody>
 <tr>
-<td>Your C++14 header only Dependency Injection library with no dependencies (<a href="./examples/index.html#hello-world"><strong>Try it online!</strong></a>)</td>
+<td>Your C++14 header only Dependency Injection library with no dependencies (<a href="http://boost-experimental.github.io/di/examples/index.html#hello-world"><strong>Try it online!</strong></a>)</td>
 <td><a class="github-button" href="https://github.com/boost-experimental/di" data-style="mega" data-count-href="/boost-experimental/di/stargazers" data-count-api="/repos/boost-experimental/di#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star boost-experimental/di on GitHub">GitHub</a></td>
 </tr>
 </tbody>
@@ -403,5 +403,5 @@ but also can help you with...</p>
 
 <!--
 MkDocs version : 0.15.3
-Build Date UTC : 2016-02-26 10:39:41.310506
+Build Date UTC : 2016-02-26 11:01:53.244459
 -->
