--- a/boost/overview/index.html
+++ b/boost/overview/index.html
@@ -189,9 +189,8 @@ namespace di = boost::di;
 </tr>
 </tbody>
 </table>
-<ul>
-<li>In a nutshell</li>
-</ul>
+<p><a id="nutshell"></a>
+* In a nutshell</p>
 <pre><code class="cpp">struct direct; // T(...)
 struct uniform; // T{...}
 
